tests/snapshots/snapshot__fixtures@m27__clustering.sas.snap
---
source: tests/snapshot.rs
expression: "format!(\"==== LOG ====\\n{}\\n==== LISTING ====\\n{}\\n==== EXIT {} ====\",\noutcome.log, outcome.listing, outcome.exit_code)"
input_file: tests/fixtures/m27/clustering.sas
---
==== LOG ====

1     title 'M27.3: PROC DISTANCE, PROC CLUSTER, PROC FASTCLUS';

2     data work.pts;
3       input x;
4     datalines;
5     1
6     2
7     3
8     7
9     8
10    9
11    ;
NOTE: The data set WORK.PTS has 6 observations and 1 variables.
NOTE: DATA statement used (Total process time):
            real time           0.00 seconds
            cpu time            0.00 seconds

12    proc distance data=work.pts out=work.dist method=euclid;
13      var x;
14    run;
NOTE: There were 6 observations read from the data set WORK.PTS.
NOTE: The data set WORK.DIST has 6 observations and 8 variables.
NOTE: PROCEDURE DISTANCE used (Total process time):
            real time           0.00 seconds
            cpu time            0.00 seconds

15    proc cluster data=work.pts method=ward;
16      var x;
17    run;
NOTE: There were 6 observations read from the data set WORK.PTS.
NOTE: PROCEDURE CLUSTER used (Total process time):
            real time           0.00 seconds
            cpu time            0.00 seconds

18    proc fastclus data=work.pts maxclusters=2 out=work.clust maxiter=20;
19      var x;
20    run;
NOTE: There were 6 observations read from the data set WORK.PTS.
NOTE: PROC FASTCLUS approximates the SAS algorithm: seeds are selected farthest-first, MAXITER= defaults to 10 and MAXCLUSTERS= is required (SAS: RADIUS=/REPLACE= seed rules, MAXITER=1, MAXCLUSTERS=100); cluster assignments can differ from SAS (planned: roadmap-avancee J09-P7).
NOTE: The data set WORK.CLUST has 6 observations and 2 variables.
NOTE: PROCEDURE FASTCLUS used (Total process time):
            real time           0.00 seconds
            cpu time            0.00 seconds

21    run;

22    title;

==== LISTING ====
                       M27.3: PROC DISTANCE, PROC CLUSTER, PROC FASTCLUS

                                     The DISTANCE Procedure

                                   Distance Method: Euclidean

                                     N = 6    Variables = 1

                                        Distance Matrix

                          Col1      Col2      Col3      Col4      Col5      Col6

                Row1    0.0000    1.0000    2.0000    6.0000    7.0000    8.0000
                Row2    1.0000    0.0000    1.0000    5.0000    6.0000    7.0000
                Row3    2.0000    1.0000    0.0000    4.0000    5.0000    6.0000
                Row4    6.0000    5.0000    4.0000    0.0000    1.0000    2.0000
                Row5    7.0000    6.0000    5.0000    1.0000    0.0000    1.0000
                Row6    8.0000    7.0000    6.0000    2.0000    1.0000    0.0000


                       M27.3: PROC DISTANCE, PROC CLUSTER, PROC FASTCLUS

                                     The CLUSTER Procedure
                            Ward's Minimum Variance Cluster Analysis

                                        Cluster History

                   NCl    Clusters Joined           Freq     SPRSQ       RSQ

                     5                OB1    OB2       2    0.0086    0.9914
                     4                OB4    OB5       2    0.0086    0.9828
                     3                CL5    OB3       3    0.0259    0.9569
                     2                CL4    OB6       3    0.0259    0.9310
                     1                CL3    CL2       6    0.9310    0.0000


                       M27.3: PROC DISTANCE, PROC CLUSTER, PROC FASTCLUS

                                     The FASTCLUS Procedure

                      Replace=FULL   Radius=0   Maxclusters=2   Maxiter=20

                                        Cluster Summary

Cluster    Frequency    RMS Std    Maximum Distance from Seed to Obs    Nearest Cluster    Distance Between Cluster Centroids

      1            3     0.8165                               1.0000                  2                                6.0000
      2            3     0.8165                               1.0000                  1                                6.0000

                                    Statistics for Variables

                 Variable    Total STD    Within STD    R-Square    RSQ/(1-RSQ)

                 x              3.4059        1.0000      0.9310        13.5000
                 OVER-ALL       3.4059        1.0000      0.9310        13.5000


==== EXIT 0 ====
